Optimized for SEO

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
         <meta name="description" content="Learn more about Kingdom Application Solutions LLC." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Us</title>
+        <title>Kingdom Application Solutions LLC | About Us</title>
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -80,10 +80,10 @@
                         </a>
                 
                         <div class="navbar-dropdown">
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/mobile-app-development.html">
                                 Mobile App Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
@@ -118,7 +118,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Our Company
+                        About Our Company
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
