--- a/graphic-design.html
+++ b/graphic-design.html
@@ -13,9 +13,8 @@
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
         <meta name="description" content="Graphic design work for your small business, church, ministry, or religious non-profit from Kingdom Application Solutions LLC." />
-        <meta name="keywords" content="website, mobile apps, development, graphic design, technology, missionary, church, non-profit, religion, religious, development, application, solutions, kingdom, resources">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Graphic Design</title>
+        <title>Kingdom Application Solutions LLC | Graphic Design</title>
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -81,10 +80,10 @@
                         </a>
                 
                         <div class="navbar-dropdown">
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/mobile-app-development.html">
                                 Mobile App Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
                             <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/graphic-design.html">
@@ -133,7 +132,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Quality graphic work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Custom graphic design can enable you to effectively communicate, give out information, and connect with others.
+                    Quality graphic design work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Custom graphic design can enable you to effectively communicate, give out information, and connect with others.
                 </h2><br>
                 <h1 class="title">
                     Pricing
