--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </script>
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
-        <meta name="description" content="The official website for Kingdom Application Solutions LLC." />
+        <meta name="description" content="Kingdom Application Solutions LLC offers mobile app development and website development for churches, ministries, and religious non-profit organizations.." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kingdom Application Solutions LLC</title>
+        <title>Kingdom Application Solutions LLC | Mobile App & Website Development</title>
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -80,10 +80,10 @@
                         </a>
                 
                         <div class="navbar-dropdown">
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/mobile-app-development.html">
                                 Mobile App Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
@@ -123,7 +123,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Quality Mobile Apps, Websites, & Graphic Design!
+                        Mobile App Development, Website Development, & Graphic Design for Churches and Ministries!
                     </h1>
                 </div>    
             </div>     
@@ -177,10 +177,10 @@
                     </div>
                     <div class="column">
                         <h2 class="subtitle privacy-h3">
-                            Mobile Apps
+                            Mobile App Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer progressive web apps (PWAs) and hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed either as PWAs or hybrid mobile apps. PWAs are deployed online and hybrid apps are deployed to both the Google Play Store and the Apple App Store.
+                            We offer progressive web app (PWAs) and hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed either as PWAs or hybrid mobile apps. PWAs are deployed online and hybrid apps are deployed to both the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>About Mobile App Development</b>
@@ -198,7 +198,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer the design and development of custom websites for any church, ministry, missionary/church planter, or religious non-profit organization interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
+                            We offer website design and development for churches, ministries, missionaries/church planters, or religious non-profit organizations interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance. We also offer the option of single landing pages and website development without a monthly service plan.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
                             <b>About Website Development</b>
