--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -14,7 +14,7 @@
         <meta http-equiv="Cache-Control" content="public, max-age:2592000" />
         <meta name="description" content="Read about the mission, vision, and values of Kingdom Application Solutions LLC." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mission, Vision, & Values</title>
+        <title>Kingdom Application Solutions LLC | Mission, Vision, & Values</title>
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
@@ -79,10 +79,10 @@
                         </a>
                 
                         <div class="navbar-dropdown">
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/apps.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/mobile-app-development.html">
                                 Mobile App Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
+                            <a class="navbar-item" href="https://kingdomappsolutions.tech/website-development.html">
                                 Website Development
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
