Updated branding color & prices

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -136,19 +136,19 @@
                 </h2>
                 <p></p>
                 <h1 class="title">
-                    Progressive Web App Development
-                </h1>
-                <p></p>
-                <h2 class="subtitle privacy-h2">
-                    A progressive web app (PWA) for your church or ministry can enable you to effectively communicate with your congregation, ministry target area, or mission field. PWAs are lighter than hybrid mobile apps, are installed from a web browser rather than an app store, and allow for more instant updates without app store waiting times. PWAs are also easier to find through web searches than hybrid apps. PWAs can do much of the same things hybrid apps can do including receive push notifications and utilize some device hardware. Progressive web apps are becoming much more popular especially considering that 51% of smartphone users have downloaded zero apps from app stores each month. Some examples of organizations using PWAs include Trivago, Starbucks, Pinterest, and Uber.
-                </h2>
-                <p></p>
-                <h1 class="title">
                     Hybrid App Development
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    In contrast to PWAs, hybrid mobile apps also allow for your church or ministry to communicate with your congregation, ministry target area, or mission field. Hybrid mobile apps tend to be larger file sizes and require users to find the app on the respective app stores and download them to their device. Hybrid mobile apps are more popular, but get downloaded much less frequently. Any updates to hybrid apps could take days due to app store approval times. However, hybrid mobile apps are a great option if you want users to have a more native app feel with more device hardware functionality. <br><br> Listed below are the app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to either the app stores or online as a PWA. Contact us through the contact page if you are interested in either PWA or hybrid mobile app development.
+                    A hybrid mobile app for your church or ministry can allow for your church or ministry to communicate with your congregation, ministry target area, or mission field. Hybrid mobile apps tend to be larger file sizes and require users to find the app on the respective app stores and download them to their device. Hybrid mobile apps are more popular and feature rich, but get downloaded much less frequently. Any updates to hybrid apps could take time due to app store approval times with typical updates happening within a day. Hybrid mobile apps are a great option if you want users to have a more native app feel with more device hardware functionality.
+                </h2>
+                <p></p>
+                <h1 class="title">
+                    Progressive Web App Development
+                </h1>
+                <p></p>
+                <h2 class="subtitle privacy-h2">
+                    In contrast, a progressive web app (PWA) for your church or ministry also enables you to effectively communicate with your congregation, ministry target area, or mission field. PWAs are lighter than hybrid mobile apps, are installed from a web browser rather than an app store, and allow for more instant updates without app store waiting times. PWAs are also easier to find through web searches than hybrid apps and can utilize search engine optimization. PWAs can do much of the same things hybrid apps can do including receive push notifications (currently not available on iOS) and utilize some device hardware. Progressive web apps are becoming much more popular especially considering that 51% of smartphone users have downloaded zero apps from app stores each month. Some examples of organizations using PWAs include Trivago, Starbucks, Pinterest, and Uber. <br><br> Listed below are the app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to either the app stores or online as a PWA. Contact us through the contact page if you are interested in either PWA or hybrid mobile app development.
                 </h2><hr>
                 <p></p>
                 <h1 class="title">
@@ -161,19 +161,18 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-brackets-curly"></i>&nbsp;
-                                    PWAs & Hybrid Apps
+                                    Hybrid Apps & PWAs
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$75/mo.</b></h2>
+                                    <h2><b>$100 per mo.</b></h2>
                                     <h3>No setup fee!</h3>
-                                    <h3>Development for both PWA or Hybrid</h3>
+                                    <h3>Development for both Hybrid or PWA</h3>
                                     <h3>Deployment to either the app stores or online</h3>
-                                    <h3>Up to ten (10) pages with tab and/or side menu navigation</h3>
-                                    <h3>Additional $25 per month for apps over the page limit</h3>
-                                    <h3>Up to (5) feature integrations</h3>
-                                    <h3>$50 per feature for additional features</h3>
+                                    <h3>Option for either tab and/or side menu navigation</h3>
+                                    <h3>No page limit!</h3>
+                                    <h3>No limit for feature integrations!</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3T5lbQ1" target="_blank"><b>Get Started!</b></a>
@@ -185,6 +184,33 @@
                 
                     <div class="column">
                         <div class="card">
+                            <header class="card-header-brick">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-star"></i>&nbsp;
+                                    App & Website Bundle
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$150 per mo.</b></h2>
+                                    <h3>No setup fee!</h3>
+                                    <h3>Price is for both an app and website</h3>
+                                    <h3>Development for either PWA or Hybrid Mobile App and Website</h3>
+                                    <h3>Deployment to the app stores and online</h3>
+                                    <h3>Same features as PWA & Hybrid App Plan</h3>
+                                    <h3>Same features as Website Development Plan</h3>
+                                    <h3>Periodic updates made as needed to publish updated content.</h3>
+                                    <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-brick" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-boxes-stacked"></i>&nbsp;
@@ -193,43 +219,17 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$50/mo. per app</b></h2>
+                                    <h2><b>$75 per mo. per app</b></h2>
                                     <h3>Two or more apps developed</h3>
                                     <h3>Development for both PWA or Hybrid</h3>
                                     <h3>Deployment to either the app stores or online</h3>
-                                    <h3>Up to ten (10) pages with tab and/or side menu navigation</h3>
-                                    <h3>Additional $25 per month for apps over the page limit</h3>
-                                    <h3>Up to (5) feature integrations</h3>
-                                    <h3>$50 per feature for additional features</h3>
-                                    <h3>Periodic updates made as needed to publish updated content</h3><br>
+                                    <h3>Option for either tab and/or side menu navigation</h3>
+                                    <h3>No page limit!</h3>
+                                    <h3>No limit for feature integrations!</h3>
+                                    <h3>Periodic updates made as needed to publish updated content</h3>
+                                    <h3><b><i>GREAT OPTION FOR MULTIPLE APPS!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3RMey48" target="_blank"><b>Get Started!</b></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-star"></i>&nbsp;
-                                    App & Website Bundle
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h2><b>$50/mo.</b></h2>
-                                    <h3>No setup fee!</h3>
-                                    <h3>Price is per app and website</h3>
-                                    <h3>Development for either PWA or Hybrid and Website</h3>
-                                    <h3>Deployment to the app stores and online</h3>
-                                    <h3>Same features as PWA & Hybrid App Plan</h3>
-                                    <h3>Same features as Website Development Plan</h3>
-                                    <h3>Periodic updates made as needed to publish updated content.</h3><br>
-                                    <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
