--- a/website-development.html
+++ b/website-development.html
@@ -152,13 +152,13 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$50/mo.</b></h2>
-                                    <h3>No setup fee!</h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
-                                    <h3>Fifteen (15) page limit</h3>
-                                    <h3>$50 per page for development <br> over the 15 page limit as a one-time charge</h3>
-                                    <h3>No annual hosting renewal fee!</h3>
-                                    <h3><b><i>BEST OVERALL VALUE!</i></b></h3><br>
+                                    <h2><b>$100 per page</b></h2>
+                                    <h3>$100 setup fee</h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, and Hosting Setup</b></h3>
+                                    <h3>No page limit!</h3>
+                                    <h3>Ten (10) page minimum site</h3>
+                                    <h3>Optional $50 per month for maintenance and periodic updates</h3>
+                                    <h3>$50 per year for hosting</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3ekiZWf" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -169,7 +169,7 @@
 
                     <div class="column">
                         <div class="card">
-                            <header class="card-header">
+                            <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-star"></i>&nbsp;
                                     App & Website Bundle
@@ -177,47 +177,23 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$50/mo.</b></h2>
+                                    <h2><b>$150 per mo.</b></h2>
                                     <h3>No setup fee!</h3>
-                                    <h3>Price is per app and website</h3>
-                                    <h3>Development for either PWA or Hybrid and Website</h3>
+                                    <h3>Price is for both an app and website</h3>
+                                    <h3>Development for either PWA or Hybrid Mobile App and Website</h3>
                                     <h3>Deployment to the app stores and online</h3>
                                     <h3>Same features as PWA & Hybrid App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Periodic updates made as needed to publish updated content.</h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="column">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop-code"></i>&nbsp;
-                                    One-Time Development
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <div class="content">
-                                    <h2><b>$100 per page</b></h2>
-                                    <h3>$100 one-time setup fee</h3>
-                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>Ten (10) page minimum</h3>
-                                    <h3>Optional $50 per month for maintenance and updates</h3>
-                                    <h3>$50 per year for hosting (if needed)</h3>
-                                    <h3><b><i>BEST VALUE FOR SELF MANAGEMENT!</i></b></h3><br>
-                                    <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3xwkR4D" target="_blank"><b>Get Started!</b></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="column">
                         <div class="card">
                             <header class="card-header">
@@ -231,7 +207,7 @@
                                     <h2><b>$500 for Development</b></h2>
                                     <h3>$100 one-time setup fee</h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>$50 per year for hosting (if needed)</h3>
+                                    <h3>$50 per year for hosting</h3>
                                     <h3><b><i>BEST VALUE FOR A SIMPLE ONE-PAGE SITE!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
