Updated contract links

--- a/website-development.html
+++ b/website-development.html
@@ -180,9 +180,9 @@
                                     <h2><b>$150 per mo.</b></h2>
                                     <h3>No setup fee!</h3>
                                     <h3>Price is for both an app and website</h3>
-                                    <h3>Development for either PWA or Hybrid Mobile App and Website</h3>
+                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
                                     <h3>Deployment to the app stores and online</h3>
-                                    <h3>Same features as PWA & Hybrid App Plan</h3>
+                                    <h3>Same features as Hybrid App & PWA Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Periodic updates made as needed to publish updated content.</h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
