--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -175,7 +175,7 @@
                                     <h3>No limit for feature integrations!</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3T5lbQ1" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button" href="https://bit.ly/3Tezd2A" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -195,9 +195,9 @@
                                     <h2><b>$150 per mo.</b></h2>
                                     <h3>No setup fee!</h3>
                                     <h3>Price is for both an app and website</h3>
-                                    <h3>Development for either PWA or Hybrid Mobile App and Website</h3>
+                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
                                     <h3>Deployment to the app stores and online</h3>
-                                    <h3>Same features as PWA & Hybrid App Plan</h3>
+                                    <h3>Same features as Hybrid App & PWA Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Periodic updates made as needed to publish updated content.</h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
