--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <h4 class="subtitle justify">
                             We offer progressive web app (PWAs) and hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed either as PWAs or hybrid mobile apps. PWAs are deployed online and hybrid apps are deployed to both the Google Play Store and the Apple App Store.
                         </h4>
-                        <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
+                        <a class="button learn-more-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>About Mobile App Development</b>
                         </a>
                     </div>
@@ -236,7 +236,7 @@
                         <h4 class="subtitle justify">
                             We offer a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Custom graphic design can enable you to effectively communicate, give out information, and connect with others. <br><br> Pricing is dependent upon which type of graphic design you are needing. We can do most graphic work including logo creation, graphics for printables including flyers, brochures, banners, and door hangers. We also provide graphics for your social media page profile.
                         </h4>
-                        <a class="button info-button" href="https://kingdomappsolutions.tech/graphic-design.html">
+                        <a class="button learn-more-button" href="https://kingdomappsolutions.tech/graphic-design.html">
                         <b>About Graphic Design</b>
                         </a>
                     </div>
