Updated core values & styling

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                         </h4>
                         <div class="content">
                             <ol class="ol">
-                                <li>Excellence in Everything</li>
-                                <li>Integrity and Honesty</li>
-                                <li>Client Focused</li>
+                                <li>Excellence</li>
+                                <li>Integrity</li>
+                                <li>Service</li>
                                 <li>Accountability</li>
                             </ol>
                         </div>
