--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -161,22 +161,22 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-badge-check"></i>&nbsp;
-                                    Excellence in Everything
+                                    Excellence
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Excellence is when we demand more of ourselves than our clients do. Excellence in Everything means we go out of our way to ensure that every app or website developed is fully functional and provides a quality user experience. We will produce and deliver the best products and services we are capable of producing. 
+                                    Excellence is when we demand more of ourselves than our clients do. Excellence in everything means we go out of our way to ensure that every app or website developed is fully functional and provides a quality user experience. We will produce and deliver the best products and services we are capable of producing. 
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="column">
                         <div class="card">
-                            <header class="card-header">
+                            <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-handshake"></i>&nbsp;
-                                    Integrity and Honesty
+                                    Integrity
                                 </p>
                             </header>
                             <div class="card-content">
@@ -191,19 +191,19 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-people-roof"></i>&nbsp;
-                                    Client Focused
+                                    Service
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Our company exists to help churches, ministries, missionaries, and religious non-profit organizations have access to quality made websites, mobile apps, and graphic design. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
+                                    Our company exists to serve churches, ministries, missionaries, and religious non-profit organizations have access to quality made websites, mobile apps, and graphic design. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="column">
                         <div class="card">
-                            <header class="card-header">
+                            <header class="card-header-brick">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-landmark"></i>&nbsp;
                                     Accountability
