--- a/privacy.html
+++ b/privacy.html
@@ -405,10 +405,10 @@
                 <div class="content">
                     <ul class="ul">
                         <li>
-                            By emailing our managing member <a href="mailto:justin@kingdomappsolutions.tech"><u>here</u>.</a>
+                            By emailing our <a href="mailto:justin@kingdomappsolutions.tech"><u>managing member</u>.</a>
                         </li>
                         <li>
-                            By visiting the contact page on our website <a href="https://www.kingdomappsolutions.tech/contact.html"><u>here</u>.</a>
+                            By visiting the <a href="https://www.kingdomappsolutions.tech/contact.html"><u>contact page</u></a> on our website.
                         </li>
                     </ul>
                 </div>
