Updated button styling

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -179,7 +179,7 @@
                                     <h3>No limit for feature integrations!</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3Tezd2A" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3Tezd2A" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -233,7 +233,7 @@
                                     <h3>Periodic updates made as needed to publish updated content</h3>
                                     <h3><b><i>GREAT OPTION FOR MULTIPLE APPS!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3RMey48" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3RMey48" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
