--- a/website-development.html
+++ b/website-development.html
@@ -164,7 +164,7 @@
                                     <h3>Optional $50 per month for maintenance and periodic updates</h3>
                                     <h3>$50 per year for hosting</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3ekiZWf" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3ekiZWf" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
                                     <h3>$50 per year for hosting</h3>
                                     <h3><b><i>BEST VALUE FOR A SIMPLE ONE-PAGE SITE!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
