--- a/privacy.html
+++ b/privacy.html
@@ -61,7 +61,7 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link">
+                        <a class="navbar-link" href="#">
                             Pricing
                         </a>
                 
@@ -83,7 +83,7 @@
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link is-active">
+                        <a class="navbar-link is-active" href="#">
                             Info
                         </a>
                 
