--- a/contact.html
+++ b/contact.html
@@ -136,9 +136,12 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    We are excited to hear from you and how we can work with you to aid in your mobile app development, website development, or graphic design needs! Please fill out the contact form below and we will get back with you as soon as we can!
+                    We are excited to hear from you and how we can work with you to aid in your mobile app development, website development, or graphic design needs! Please fill out the contact form below and we will get back with you as soon as we can! <br><br> Alternatively, simply click the button below to schedule a virtual meeting now!
                 </h2>
-            
+                <div class="buttons">
+                    <a class="button calendly-button" href="https://calendly.com/kingdomappsolutions/consultation" target="_blank">Schedule a Call With Us!</a>
+                </div>
+                <hr>
                 <form id="contactForm" action="mail.php" method="POST">
                     <div class="field">
                         <label class="label">Name:</label>
