--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -170,11 +170,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$100 per mo.</b></h2>
-                                    <h3>No setup fee!</h3>
-                                    <h3>Development for both Hybrid or PWA</h3>
-                                    <h3>Deployment to either the app stores or online</h3>
-                                    <h3>Option for either tab and/or side menu navigation</h3>
+                                    <h2><b>$500</b></h2>
+                                    <h3><b>$150 per month service fee</b></h3>
+                                    <h3>Development for either Hybrid or PWA</h3>
+                                    <h3>Deployment to either the Apple or Google app stores or online</h3>
+                                    <h3>Option for tab and/or side menu navigation</h3>
                                     <h3>No page limit!</h3>
                                     <h3>No limit for feature integrations!</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
@@ -196,11 +196,10 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$150 per mo.</b></h2>
-                                    <h3>No setup fee!</h3>
-                                    <h3>Price is for both an app and website</h3>
-                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
-                                    <h3>Deployment to the app stores and online</h3>
+                                    <h2><b>$1,000</b></h2>
+                                    <h3><b>Development for either Hybrid Mobile App or PWA and Website</b></h3>
+                                    <h3><b>$150 per month service fee</b></h3>
+                                    <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Hybrid App & PWA Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Periodic updates made as needed to publish updated content.</h3>
@@ -223,11 +222,12 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$75 per mo. per app</b></h2>
+                                    <h2><b>$500 per app</b></h2>
+                                    <h3><b>$100 per month service fee per app</b></h3>
                                     <h3>Two or more apps developed</h3>
-                                    <h3>Development for both PWA or Hybrid</h3>
-                                    <h3>Deployment to either the app stores or online</h3>
-                                    <h3>Option for either tab and/or side menu navigation</h3>
+                                    <h3>Development for either Hybrid or PWA</h3>
+                                    <h3>Deployment to either the Apple or Google app stores or online</h3>
+                                    <h3>Option for tab and/or side menu navigation</h3>
                                     <h3>No page limit!</h3>
                                     <h3>No limit for feature integrations!</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3>
