--- a/website-development.html
+++ b/website-development.html
@@ -157,12 +157,12 @@
                             <div class="card-content">
                                 <div class="content">
                                     <h2><b>$100 per page</b></h2>
-                                    <h3>$100 setup fee</h3>
+                                    <h3><b>$100 setup fee</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>No page limit!</h3>
-                                    <h3>Ten (10) page minimum site</h3>
-                                    <h3>Optional $50 per month for maintenance and periodic updates</h3>
-                                    <h3>$50 per year for hosting</h3><br>
+                                    <h3>No page maximum!</h3>
+                                    <h3>Five (5) page minimum site</h3>
+                                    <h3><b>$50 per month service fee</b></h3>
+                                    <h3><b>$50 per year for hosting</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://bit.ly/3ekiZWf" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -181,11 +181,10 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$150 per mo.</b></h2>
-                                    <h3>No setup fee!</h3>
-                                    <h3>Price is for both an app and website</h3>
-                                    <h3>Development for either Hybrid Mobile App or PWA and Website</h3>
-                                    <h3>Deployment to the app stores and online</h3>
+                                    <h2><b>$1,000</b></h2>
+                                    <h3><b>Development for either Hybrid Mobile App or PWA and Website</b></h3>
+                                    <h3><b>$150 per month service fee</b></h3>
+                                    <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Hybrid App & PWA Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Periodic updates made as needed to publish updated content.</h3>
@@ -208,10 +207,11 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h2><b>$500 for Development</b></h2>
-                                    <h3>$100 one-time setup fee</h3>
+                                    <h2><b>$500</b></h2>
+                                    <h3><b>$100 setup fee</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>$50 per year for hosting</h3>
+                                    <h3>Optional $50 per month service fee</h3>
+                                    <h3><b>$50 per year for hosting</b></h3>
                                     <h3><b><i>BEST VALUE FOR A SIMPLE ONE-PAGE SITE!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
